demos/51-eg-kube-vip/30-gateways-eg2.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: eg2-gw
  namespace: shop
spec:
  gatewayClassName: eg
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: eg2-gw-proxy
  addresses:
    - type: IPAddress
      value: "172.19.255.176"
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: api.eg2.poc.local
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: eg-tls
      allowedRoutes:
        namespaces:
          from: Same
    - name: https-grpc
      protocol: HTTPS
      port: 443
      hostname: grpc.eg2.poc.local
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: eg-tls
      allowedRoutes:
        namespaces:
          from: Same
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: eg-vip-gw
  namespace: shop
spec:
  gatewayClassName: eg
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: eg-vip-gw-proxy
  addresses:
    - type: IPAddress
      value: "172.19.255.16"
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: api.eg.poc.local
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: eg-tls
      allowedRoutes:
        namespaces:
          from: Same
    - name: https-grpc
      protocol: HTTPS
      port: 443
      hostname: grpc.eg.poc.local
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: eg-tls
      allowedRoutes:
        namespaces:
          from: Same
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
